playing with java9 support. no major progress made yet