@@ -44,7 +44,7 @@
 		<product-identifier>xenon</product-identifier>
 		<package-stage-folder>program</package-stage-folder>
 		<slf4j.version>1.8.0-alpha2</slf4j.version>
-		<testfx.version>4.0.6-alpha</testfx.version>
+		<testfx.version>4.0.8-alpha</testfx.version>
 		<jarsigner.skip>true</jarsigner.skip>
 	</properties>
 
@@ -122,7 +122,7 @@
 		<dependency>
 			<groupId>org.testfx</groupId>
 			<artifactId>openjfx-monocle</artifactId>
-			<version>8u76-b04</version>
+			<version>jdk-9+181</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -161,8 +161,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>8</source>
-					<target>8</target>
+					<source>9</source>
+					<target>9</target>
+					<!--fork>true</fork-->
+					<compilerargs>
+						<arg>--add-opens</arg><arg>java.base/java.util=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg><arg>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</arg>
+					</compilerargs>
 				</configuration>
 			</plugin>
 
